fix(api): mount global middlewares to gin engine
